feat(file-download): add endpoint to download file from blob storage
Has option to serve the file or send in base64 format
