# packages/document-service-api/src/routes/application.js
@@ -6,6 +6,7 @@ const routes = Router({ mergeParams: true });
 routes
   .get('/', documentController.getDocsForApplication)
   .post('/', ...documentController.uploadDocument)
-  .get('/:documentId', documentController.getDocumentById);
+  .get('/:documentId', documentController.getDocumentById)
+  .get('/:documentId/file', documentController.serveDocumentById);
 
 module.exports = routes;
